@@ -20,6 +20,7 @@ import org.vaadin.miki.superfields.text.SuperTextField;
 import org.vaadin.miki.superfields.util.factory.ObjectFieldFactory;
 
 import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
@@ -99,7 +100,7 @@ public class NestedObjectFieldTest {
     public void testObjectsFieldIsCollectionField() {
         final DataObject dataObject = DataObject.build();
         final NestedObject nestedObject = new NestedObject();
-        nestedObject.setObjects(List.of(dataObject));
+        nestedObject.setObjects(Collections.singletonList(dataObject));
 
         this.field.setValue(nestedObject);
 
